--- a/assets/styles/default.scss
+++ b/assets/styles/default.scss
@@ -9,7 +9,7 @@ h4,
 h5,
 h6,
 button {
-  font-family: Kanit;
+  font-family: Work sans;
   font-weight: 400;
 }
 
@@ -19,7 +19,7 @@ button {
 
 .page-enter-active,
 .page-leave-active {
-  transition: opacity .25s;
+  transition: opacity 0.25s;
 }
 
 .page-enter,
@@ -44,11 +44,11 @@ button {
   transition-property: background-image !important;
 }
 
-[lazy=loading] {
+[lazy="loading"] {
   background-position: center center !important;
 }
 
-[lazy=loaded] {
+[lazy="loaded"] {
   opacity: 1;
   background-size: cover;
 }
